--- a/incidencias/plantillas/incidenciaform.html
+++ b/incidencias/plantillas/incidenciaform.html
@@ -48,15 +48,10 @@ alert("Ud. decidió no grabar la incidencia!");
   		<div class="col-sm-4">
   		<select class="form-control" name="uuoorepo">
   		<option value="" selected disabled>-----------</option>
-  		<option>6N0000</option>
-        <option>6N0200</option>
-        <option>6N0300</option>
-        <option>6N0310</option>
-        <option>6N0320</option>
-        <option>6N0400</option>
-        <option>6N0500</option>
-        <option>6N0600</option>
-        <option>801000</option>
+  		<option>ADMINISTRACION</option>
+        <option>RRHH</option>
+        <option>MARKETING</option>
+        <option>CONTABILIDAD</option>
 		</select>
 		</div>
 		</div>
@@ -65,19 +60,8 @@ alert("Ud. decidió no grabar la incidencia!");
   		<div class="col-sm-4">
   		<select class="form-control" name="direccion">
   		<option value="" selected disabled>-----------</option>
-  		<option>CSC HYO - Calle Real N°333 </option>
-      <option>Auditoría - Jr.Nemezio Raez N° 754 </option>
-      <option>CSC HYO II - Jr. Santiago Norero N° 330</option>
-      <option>CSC Chanchamayo - Jr. Arica N° 360 Urb. </option>
-      <option>CSC La Oroya - Av. Horacio Zevallos Gamez N° 313 </option>
-      <option>CSC Tarma - Jr. Arequipa N° 257, Int. 1 </option>
-      <option>CSC Huancavelica - Jr. Agustín Gamarra N° 319 </option>
-      <option>CSC Satipo - Jr. San Martín N° 462 </option>
-      <option>CSC OXAPAMPA - Prolong. Bolognesi MZ 014 Lote 09 Sub Lote 1 B Cercado</option>
-      <option>PTO CTRL CASARACRA - Carretera Central Km 10.5 Unidad de Peaje Casaracra</option>
-      <option>PTO CTRL HERRERÍA - Av. Perú s/n - Pampa del Carmen</option>
-      <option>ALMACEN EX PRONAA - Carretera Central K.M. 7.5 </option>
-      <option>ALMACEN LA OROYA - Av. Miguel Grau N° 530 </option>
+  		<option>LOCAL 01 </option>
+      		<option>LOCAL 02 </option>
 		</select>
 		</div>
 		</div>
